# ChangeLog for calc-extension:

*calc-extension-5.1:
	Martin Väth <martin at mvath.de>:
	- Fix display of #
	- Put most storage options in one line
	- Add tooltips even for the texts for constants and functions

*calc-extension-5.0:
	Martin Väth <martin at mvath.de>:
	- Everything now has an explaining tooltip/title
	- Option to store accordion state
	- Buttons to expand/collapse accordion
	- There is now an option to store options set in the main window
	- The accordion list is now itself a detail which can be closed
	- Always provide ~> button
	- Input line keeps focus
	- New option for textarea mode replaces previous non-button option
	- Store/restore type and size of input fields with session
	- Clickable Backspace button
	- Increase default size to 80:5
	- Up-/Down-arrows in font-weight bolder
	- Center icon
	- Bugfix: when restoring a session from a textarea in an input field,
	  newlines are now converted to spaces
	- Bugfix: avoid possible races with storage

*calc-extension-4.0:
	Martin Väth <martin at mvath.de>:
	- New layout of pagehead: Hide details first
	- Buttons for editing (clean, remove, move or insert line, redraw)
	- Buttons for all operators, variables, constants, numbers, etc
	- Buttons to store options and clean storage also in main window
	- Display current value of #
	- Alternative symbols for sqrt and cbrt: √ and ∛
	- Attempt to keep result scrolled in
	- Button to restore session
	- Internal: clean line organization
	- Internal: avoid redundant array variables
	- Internal: use clean HTML5 which passes https://validator.w3.org/
	- Bugfix: default options propagation when cleaning storage
	- Bugfix: resetting to default width works now in non-button mode

*calc-extension-3.0:
	Martin Väth <martin at mvath.de>:
	- Extend syntax (easy game with the Pratt parser!):
	- Multiplication symbol can be omitted now
	- Function calls do not require braces () now
	- Alternative symbols for *, ** and / (namely × or ·, ↑ and :)